Parameterize the heat-docker-agents image
Heat docker agents needs to be parameterized so that
we can change the tag from the environment file.

Change-Id: I352fd0fdf982056de23285e366efe55ca3aaff1b
Co-authored-by: Jeff Peeler <jpeeler@redhat.com>

--- a/environments/docker.yaml
+++ b/environments/docker.yaml
@@ -14,6 +14,7 @@ parameter_defaults:
   DockerNamespaceIsRegistry: false
   # Compute Node Images
   DockerComputeImage: centos-binary-nova-compute:latest
+  DockerAgentImage: heat-docker-agents:latest
   DockerComputeDataImage: centos-binary-data:latest
   DockerLibvirtImage: centos-binary-nova-libvirt:latest
   DockerNeutronAgentImage: centos-binary-neutron-agents:latest
