Make AllNodesExtraConfig depend on the validation deployments
AllNodesExtraConfig should really only run after the validation
deployments are done, which validate that basic networking is
functioning.

In particular, creating a swap file during AllNodesExtraConfig while the
validation deployments are still running might cause temporary network
outages which could fail the validations.

Change-Id: Ia2a10318de47854a9b8932d72243ce0a85603556
Partial-Bug: #1553243
(cherry picked from commit 0951c6e359edd2d34cd2bbd6a12278454a905258)

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1510,7 +1510,13 @@ resources:
   # the nested template may configure each role differently (or not at all)
   AllNodesExtraConfig:
     type: OS::TripleO::AllNodesExtraConfig
-    depends_on: UpdateWorkflow
+    depends_on:
+      - UpdateWorkflow
+      - ComputeAllNodesValidationDeployment
+      - BlockStorageAllNodesValidationDeployment
+      - ObjectStorageAllNodesValidationDeployment
+      - CephStorageAllNodesValidationDeployment
+      - ControllerAllNodesValidationDeployment
     properties:
       controller_servers: {get_attr: [Controller, attributes, nova_server_resource]}
       compute_servers: {get_attr: [Compute, attributes, nova_server_resource]}
