Use MysqlVirtualIPUri for nova_api and sahara database
Without this the nova_api and sahara database_connection string won't
add brackets around the IP address, when IPv6, causing db sync to fail.

Change-Id: I262e5de993ae59ad665edb043119aac2e09c6fdc

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1173,7 +1173,7 @@ resources:
             - - 'mysql+pymysql://nova_api:'
               - {get_param: NovaPassword}
               - '@'
-              - {get_param: MysqlVirtualIP}
+              - {get_param: MysqlVirtualIPUri}
               - '/nova_api'
         upgrade_level_nova_compute: {get_param: UpgradeLevelNovaCompute}
         instance_name_template: {get_param: InstanceNameTemplate}
@@ -1213,7 +1213,7 @@ resources:
             - - 'mysql://sahara:'
               - {get_param: SaharaPassword}
               - '@'
-              - {get_param: MysqlVirtualIP}
+              - {get_param: MysqlVirtualIPUri}
               - '/sahara'
         swift_proxy_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, SwiftProxyNetwork]}]}
         swift_management_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, SwiftMgmtNetwork]}]}
