--- a/network/service_net_map.yaml
+++ b/network/service_net_map.yaml
@@ -43,6 +43,7 @@ parameters:
       MysqlNetwork: internal_api
       CephClusterNetwork: storage_mgmt
       CephMonNetwork: storage
+      CephRgwNetwork: storage
       ControllerHostnameResolveNetwork: internal_api
       ComputeHostnameResolveNetwork: internal_api
       BlockStorageHostnameResolveNetwork: internal_api
