Change the CinderISCSIHelper to lioadm
Previously we used to always set CinderISCSIHelper to lioadm from
the client. With [1] we aim at cleaning up the client from any
default so this change move the actual default into the templates.

1. Iabc94ad1cce6f1744429aca9f866a59a698f5680

Change-Id: I662e4b0e3cf909ec2583d087ca1d246715caf0f7
Related-Bug: 1554564
(cherry picked from commit 7f2bca677bbffdd1a3031709fcc9d6f0bac48bb7)

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -370,7 +370,7 @@ parameters:
     type: string
     hidden: true
   CinderISCSIHelper:
-    default: tgtadm
+    default: lioadm
     description: The iSCSI helper to use with cinder.
     type: string
   ControllerCount:
