Change the CinderISCSIHelper to lioadm
Previously we used to always set CinderISCSIHelper to lioadm from
the client. With [1] we aim at cleaning up the client from any
default so this change move the actual default into the templates.

1. Iabc94ad1cce6f1744429aca9f866a59a698f5680

Change-Id: I662e4b0e3cf909ec2583d087ca1d246715caf0f7
Related-Bug: 1554564

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -57,7 +57,7 @@ parameters:
     description: Whether to enable or not the Rbd backend for Cinder
     type: boolean
   CinderISCSIHelper:
-    default: tgtadm
+    default: lioadm
     description: The iSCSI helper to use with cinder.
     type: string
   CinderLVMLoopDeviceSize:
