--- a/puppet/ceph-storage.yaml
+++ b/puppet/ceph-storage.yaml
@@ -62,6 +62,9 @@ parameters:
     description: |
       Role specific additional hiera configuration to inject into the cluster.
     type: json
+  CephStorageIPs:
+    default: {}
+    type: json
   NetworkDeploymentActions:
     type: comma_delimited_list
     description: >
@@ -90,6 +93,9 @@ parameters:
     type: json
     description: Optional scheduler hints to pass to nova
     default: {}
+  NodeIndex:
+    type: number
+    default: 0
 
 resources:
   CephStorage:
@@ -135,31 +141,43 @@ resources:
     type: OS::TripleO::CephStorage::Ports::ExternalPort
     properties:
       ControlPlaneIP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+      IPPool: {get_param: CephStorageIPs}
+      NodeIndex: {get_param: NodeIndex}
 
   InternalApiPort:
     type: OS::TripleO::CephStorage::Ports::InternalApiPort
     properties:
       ControlPlaneIP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+      IPPool: {get_param: CephStorageIPs}
+      NodeIndex: {get_param: NodeIndex}
 
   StoragePort:
     type: OS::TripleO::CephStorage::Ports::StoragePort
     properties:
       ControlPlaneIP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+      IPPool: {get_param: CephStorageIPs}
+      NodeIndex: {get_param: NodeIndex}
 
   StorageMgmtPort:
     type: OS::TripleO::CephStorage::Ports::StorageMgmtPort
     properties:
       ControlPlaneIP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+      IPPool: {get_param: CephStorageIPs}
+      NodeIndex: {get_param: NodeIndex}
 
   TenantPort:
     type: OS::TripleO::CephStorage::Ports::TenantPort
     properties:
       ControlPlaneIP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+      IPPool: {get_param: CephStorageIPs}
+      NodeIndex: {get_param: NodeIndex}
 
   ManagementPort:
     type: OS::TripleO::CephStorage::Ports::ManagementPort
     properties:
       ControlPlaneIP: {get_attr: [CephStorage, networks, ctlplane, 0]}
+      IPPool: {get_param: CephStorageIPs}
+      NodeIndex: {get_param: NodeIndex}
 
   NetworkConfig:
     type: OS::TripleO::CephStorage::Net::SoftwareConfig
