Enable predictable IPs on non-controllers
For the external loadbalancer work, we added the ability to specify
fixed ips for controller nodes on all network isolation networks.
In order to allow users full control over the placement and ip
addresses of deployed nodes, we need to be able to do the same thing
for the other node types.

Change-Id: I3ea91768b2ea3a40287f2f3cdb823c23533cf290
(cherry picked from commit 0b312992e619c41ec7afd3604469c03e019923a2)

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -1100,6 +1100,7 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: NovaComputeSchedulerHints}
+          NodeIndex: '%index%'
 
   BlockStorage:
     type: OS::Heat::ResourceGroup
@@ -1141,6 +1142,7 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: BlockStorageSchedulerHints}
+          NodeIndex: '%index%'
 
   ObjectStorage:
     type: OS::Heat::ResourceGroup
@@ -1173,6 +1175,7 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: ObjectStorageSchedulerHints}
+          NodeIndex: '%index%'
 
   CephStorage:
     type: OS::Heat::ResourceGroup
@@ -1200,6 +1203,7 @@ resources:
           CloudDomain: {get_param: CloudDomain}
           ServerMetadata: {get_param: ServerMetadata}
           SchedulerHints: {get_param: CephStorageSchedulerHints}
+          NodeIndex: '%index%'
 
   ControllerIpListMap:
     type: OS::TripleO::Network::Ports::NetIpListMap
