Use puppet parameter for Heat notifications
When the original change merged, the puppet module change to expose
the notification_driver as a top-level param had not been backported.
It looks like it now has, so this is breaking all of our stable
deployments because the config option is being set twice.

Change-Id: I5c50e4c458ed9f4ad37114550a22d297593af0f6
Closes-Bug: 1555803

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -97,6 +97,7 @@ cinder_user_enabled_backends: []
 heat::engine::configure_delegated_roles: false
 heat::engine::trusts_delegated_roles: []
 heat::instance_user: ''
+heat::notification_driver: 'messaging'
 
 # pacemaker
 pacemaker::corosync::cluster_name: 'tripleo_cluster'
