Add database directory mount for openvswitchdb
openvswitchdb creates a db.conf file in /etc/openvswitch.  This just
maps it to the host so we don't lose data.

Change-Id: Ic773ba94522f108a765a09849e2f442ef3ca3bcf

--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -200,6 +200,7 @@ resources:
           volumes:
            - /run:/run
            - /var/lib/etc-data/json-config/ovsdb-server.json:/var/lib/kolla/config_files/config.json
+           - /etc/openvswitchd:/etc/openvswitchd
           environment:
            - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
 
